force-app/main/default/objects/Access_Consent__c/Access_Consent__c.object-meta.xml
<CustomObject>
    <label>Access Consent</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Consent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Consents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>